# leviathan_v2

./: Cargo.toml  README.md  stRevertTest_benchmarks.csv  stZeroKnowledge_benchmarks.csv
.github/workflows/: ci.yml
GeneralStateTestsFiller/stAttackTest/: CrashingTransactionFiller.json
GeneralStateTestsFiller/stCallCodes/: call_OOG_additionalGasCosts1Filler.json  callcallcall_000_OOGMAfterFiller.json  callcallcall_000_OOGMBeforeFiller.json  callcallcallcode_001_OOGMBeforeFiller.json  callcallcallcode_001_SuicideEndFiller.json  callcallcallcode_001_SuicideMiddleFiller.json  callcallcallcode_ABCB_RECURSIVEFiller.json  callcallcodecall_010Filler.json  callcallcodecall_010_SuicideEndFiller.json  callcallcodecall_ABCB_RECURSIVEFiller.json  callcallcodecallcode_011Filler.json  callcallcodecallcode_011_OOGEFiller.json  callcallcodecallcode_011_OOGMBeforeFiller.json  callcallcodecallcode_ABCB_RECURSIVEFiller.json  callcodeDynamicCodeFiller.json  callcodeInInitcodeToExisContractWithVTransferNEMoneyFiller.json  callcodeInInitcodeToExistingContractFiller.json  callcodecall_10Filler.json  callcodecall_10_SuicideEndFiller.json  callcodecallcallcode_101Filler.json  callcodecallcallcode_101_OOGMAfterFiller.json  (+4 more)
circom/: .gitignore  extract_proof.js  generate_commitment.js  generate_input.js  input.json  package-lock.json  package.json  pot12_0001.ptau  vkey.json  voting.circom  voting.r1cs  voting.sym
gas_analy/: analy.R  rsa_benchmarks.csv
solidity/: IdentityRegistry.sol  MyNumberVerifier.sol  Voting.sol
src/: lib.rs  main.rs  solidity_utils.rs  vk_builder.rs  zk_prover.rs
tests/: bench_runner.rs  election_test.rs  groth16_verify.rs  state_runner.rs
(+3440 files in other folders)
