[package]
name = "leviathan_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = {version = "1.5.7", features = ["serde"]}
secp256k1 = {version = "0.31.1", features = ["recovery"]}
sha3 = "0.10.8"
rlp = "0.6.1"
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

