[package]
name = "leviathan_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = {version = "1.5.7", features = ["serde", "rlp"]}
secp256k1 = {version = "0.31.1", features = ["recovery"]}
sha3 = "0.10.8"
# 以下の2行のバージョンを下げて、rsaエコシステム(digest 0.10)に合わせます
sha2 = {version = "0.10.8", features = ["oid"]}
ripemd = "0.1.3" 
bytes = "1.11.1"
alloy-rlp = "0.3.15"
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stacker = "0.1.23"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}
num-bigint = "0.4.6"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
eth_trie = "0.6.1"
rsa = "0.9.10"
rand = "0.8.5"
alloy-sol-types = "0.7.0"
